# jaba

./: .gitignore  README.md
client/: CMakeLists.txt
client/src/: colour.hpp  main.cpp  test_xml.xml
client/src/client/: client.cpp  client.hpp
client/src/crypto/: crypto.cpp  crypto.hpp  gost_defined.hpp
client/src/math/: math.cpp  math.hpp
client/src/parser/: xml.cpp  xml.hpp
server/: CMakeLists.txt
server/src/: main.cpp  main.hpp
server/src/crypto/: crypto.cpp  crypto.hpp
server/src/math/: math.hpp
server/src/parser/: xml.cpp
server/src/server/: server.cpp  server.hpp
